Updated env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
-PROMOTXTER_API_KEY = 'api-key-here'
-PROMOTXTER_API_SECRET = 'api-secret-here'
-PROMOTXTER_FROM = 'api-sender-id'
+PROMOTXTER_API_KEY = api-key-here
+PROMOTXTER_API_SECRET = api-secret-here
+PROMOTXTER_FROM = api-sender-id
+RECEIVING_NUMBER = 639000000000
