--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PROMOTXTER_API_KEY = api-key-here
-PROMOTXTER_API_SECRET = api-secret-here
-PROMOTXTER_FROM = api-sender-id
+PROMOTEXTER_API_KEY = api-key-here
+PROMOTEXTER_API_SECRET = api-secret-here
+PROMOTEXTER_FROM = api-sender-id
 RECEIVING_NUMBER = 639000000000
