comply with new API of promotexter

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PROMOTEXTER_API_KEY = api-key-here
-PROMOTEXTER_API_SECRET = api-secret-here
-PROMOTEXTER_FROM = api-sender-id
-RECEIVING_NUMBER = 639000000000
+PROMOTEXTER_API_KEY     = api-key-here
+PROMOTEXTER_API_SECRET  = api-secret-here
+PROMOTEXTER_SENDER_ID   = api-sender-id
+RECEIVING_NUMBER        = 639000000000
